# encrypted_chat_app

./: Cargo.toml  README.md  index.html
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
src/: router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: encrypt_commands.rs  kyc_validation.rs  lib.rs  main.rs
src/components/: mod.rs
src/components/navigation/: nav.rs
src/pages/: background.rs
ui/: Cargo.toml
ui/css/: output.css
ui/src/: main.rs
ui/src/components/signing/: mod.rs
ui/src/pages/: home.rs
