[package]
name = "encrypted-chat-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "encrypted_chat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10.3"
rand = "0.9.2"
x25519-dalek = {version = "2",features = ["static_secrets"] }
ed25519-dalek = {version = "2.2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22.1"
tauri-plugin-store = "2"
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.3.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
